Add map points to map

--- a/client/src/components/Search/style.css
+++ b/client/src/components/Search/style.css
@@ -1,4 +1,4 @@
-/* SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2 SingleDatePickerInput__block SingleDatePickerInput__block_3 */
+/* Override react-dates styles */
 .SingleDatePickerInput {
   display: block;
   width: 100%;
