--- a/client/src/pages/css/MainPage.css
+++ b/client/src/pages/css/MainPage.css
@@ -1,37 +1,66 @@
-body, html {
-width: 100%;
-height: 100%;
+body,
+html {
+  width: 100%;
+  height: 100%;
+
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.searchBox{
+.searchBox {
   box-shadow: 3px 2px 10px 18px lightgray;
 }
 
 h1 {
-  text-shadow: 3px 2px paleturquoise
-  ;
+  text-shadow: 3px 2px paleturquoise;
 }
 
-.textNimg{
+.textNimg {
   box-shadow: 3px 2px 10px 18px lightgrey;
+  height: 50vh;
+  margin-bottom: 55px;
 }
 
 h5 {
-  text-shadow: 3px 2px lightgrey
-  ;
+  text-shadow: 3px 2px lightgrey;
 }
-.stickyPart {
-  /* position: -webkit-sticky; */
-  position: sticky;
-  top: 0; 
-  background-color: white;
-  /* padding: 50px; */
-  /* font-size: 20px; */
- } 
+
+.footer
+{
+  border: 2px solid rebeccapurple;
+}
+
+body,
+html {
+  height: 100%;
+}
+.demo
+{
+  margin-top: 20px;
+  border: 2px solid red;
+  height: 55vh;
+  width: 100%;
+background-image: url("/images/pic2.png");
+background-repeat: no-repeat;
+background-size: 100%;
+
+}
+#textimg{
+margin-top: 60px;
+}
 
 
-
+.searchBars {
+  /* The image used */
+  background-image: url("/images/pic1.png");
+margin-bottom: 55px;
+  /* Full height */
+  height: 150px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
