--- a/client/src/pages/css/MainPage.css
+++ b/client/src/pages/css/MainPage.css
@@ -3,71 +3,48 @@ html {
   width: 100%;
   height: 100%;
 }
-
 * {
   box-sizing: border-box;
 }
-
-.searchBox {
+.intro {
+  padding: 180px;
+  font-size: 70px;
+  color: white;
+  text-shadow: 3px 3px black;
+}
+.boxShadow {
   box-shadow: 3px 2px 10px 18px lightgray;
 }
-
 h1 {
   text-shadow: 3px 2px paleturquoise;
 }
-
 .textNimg {
   box-shadow: 3px 2px 10px 18px lightgrey;
-  height: 50vh;
+  height: 35vh;
   margin-bottom: 55px;
 }
-
 h5 {
   text-shadow: 3px 2px lightgrey;
 }
 .footer {
   border: 2px solid rebeccapurple;
 }
-
-body,
-html {
-  height: 100%;
-}
 .demo {
   margin-top: 20px;
-
-  height: 54vh;
+  /* border: 2px solid red; */
+  height: 55vh;
   width: 100%;
-  z-index: -1;
-
-  background-image: url("/images/image.jpg");
+  background-image: url("/images/pic2.png");
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.87;
-  background-color: rgba(0, 0, 0);
   background-position: center;
 }
-
-#text1 {
-  position: relative;
-  left: 90px;
-  top: 50px;
-}
-
-.btn1 {
-  background-color: rgb(255, 175, 77);
-  color: white;
-  width: 150px;
-  border-radius: 50px;
-}
-
 #textimg {
   margin-top: 60px;
 }
-
-.searchBars {
+.parallaxImg {
   /* The image used */
-  background-image: url("/images/pic1.png");
+  background-image: url("/images/pic3.png");
   margin-bottom: 55px;
   /* Full height */
   height: 150px;
