removed background img on workSpace page

--- a/client/src/pages/css/MainPage.css
+++ b/client/src/pages/css/MainPage.css
@@ -14,6 +14,10 @@ html {
   text-shadow: 3px 3px black;
 }
 
+.searchSection {
+  padding: 30px;
+}
+
 .boxShadow {
   box-shadow: 3px 2px 10px 18px lightgray;
 }
