--- a/client/src/pages/css/MainPage.css
+++ b/client/src/pages/css/MainPage.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 .imgNtext {
-padding: 30px;
+  padding: 30px;
 }
 
 .whyGTA {
@@ -77,4 +77,61 @@ h2 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.textNimg {
+  box-shadow: 3px 2px 10px 18px lightgrey;
+  height: 55vh;
+  margin-bottom: 55px;
+}
+
+.info-blocks {
+  margin-bottom: 15px; /* background: #efefef; */
+}
+.info-blocks i.icon-info-blocks {
+  /* float: left; */
+  color: #93c83f;
+  font-size: 48px;
+  min-width: 50px;
+  margin-bottom: 15px;
+  text-align: center; /* background: #ffffff; */
+  width: 72px; /* height: 72px; */ /* padding-top: 21px; */ /* border: 1px solid #e0e0e0; */ /* line-height: 75px; */
+  width: 100%;
+}
+.info-blocks .info-blocks-in {
+  padding: 46px 22px;
+  overflow: hidden;
+  border: 1px solid #dedede;
+  text-align: center;
+  background: #fff;
+}
+.info-blocks .info-blocks-in h3 {
+  color: #202020;
+  font-size: 22px;
+  line-height: 28px;
+  margin: 0px;
+  margin-bottom: 8px; /* font-weight: bold; */
+}
+.info-blocks .info-blocks-in p {
+  font-size: 14px;
+}
+.info-blocks .info-blocks-in:hover {
+  border: 1px solid #93c83f;
+}
+#hoverEffect:hover {
+  background-color: chartreuse;
+}
+
+.testflex {
+  display: flex;
+  box-shadow: 3px 2px 10px 18px lightgrey;
+  height: auto;
+  margin-bottom: 55px;
+  padding: 70px 30px;
+}
+
+.info-blocks-in img {
+  border-radius: 80%;
+  margin-bottom: 40px;
+  height: 100px;
 }
