--- a/client/src/pages/css/ownerDashboard.css
+++ b/client/src/pages/css/ownerDashboard.css
@@ -1,5 +1,53 @@
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .card-img-top {
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+.ownerBg { 
+  background-image: url("/images/pic6.png");
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 10px 10px 10px 18px grey;
+ }
+
+.DBheader {
+  background-color: rgb(252, 228, 213);
+  padding: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bolder;
+  border: 10px double;
+  box-shadow: 2px 2px 2px 2px grey;
+}
+
+.paddingForPage {
+  clear: both;
+  padding: 20px;
+}
+
+.borderForAddress {
+  border: 2px solid rgb(228, 159, 115);
+  box-shadow: 2px 2px rgb(228, 159, 115);
+  background-color:white;
+}
+.cardDeck {
+  box-shadow: 2px 2px 2px 2px rgb(228, 159, 115);
+}
+.detailNedit {
+  padding: 15px;
+  font-size: larger;
+  font-weight: bold;
+  background-color: white;
+  
 }
