--- a/client/src/pages/css/AddLocation.css
+++ b/client/src/pages/css/AddLocation.css
@@ -18,9 +18,9 @@ html {
 
 .locheader {
     background-color: rgb(255, 255, 250);
-    padding: 20px;
-    text-align: center;
-    font-size: 30px;
+    padding: 10px;
+    text-align: right;
+    font-size: 25px;
     font-weight: bolder;
     border: 10px double;
     box-shadow: 2px 2px 2px 2px grey;
