--- a/client/src/pages/css/MainPage.css
+++ b/client/src/pages/css/MainPage.css
@@ -43,6 +43,10 @@ html {
   padding-top: 100px;
 }
 
+#headcolor {
+  color: darkorange;
+}
+
 .boxShadow {
   box-shadow: 3px 2px 10px 18px lightgray;
 }
@@ -77,8 +81,6 @@ h2 {
 }
 
 .demo {
-  margin-top: 20px;
-  /* border: 2px solid red; */
   height: 45.5vh;
   width: 100%;
   background-image: url("/images/image.jpg");
@@ -87,9 +89,9 @@ h2 {
   background-position: center;
 }
 
-/* #textimg {
-  margin-top: 60px;
-} */
+.imageRow {
+  margin: 50px 0px;
+}
 
 .parallaxImg {
   /* The image used */
