--- a/client/src/pages/css/BkgWorkSpace.css
+++ b/client/src/pages/css/BkgWorkSpace.css
@@ -29,13 +29,15 @@ html {
 
 .wholePagePadding {
   clear: both;
-  padding: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .pricebreakdown {
-border: 2px solid black;
-background-color: rgb(113, 189, 215);
-margin-top: 80px;
+  border: 2px solid black;
+  background-color: rgb(113, 189, 215);
+  margin-top: 80px;
 }
 
 .bkgSpFooter {
