--- a/client/src/pages/css/AddLocation.css
+++ b/client/src/pages/css/AddLocation.css
@@ -8,44 +8,45 @@ html {
   box-sizing: border-box;
 }
 
-.locationBg { 
-  background-image: url("/images/pic7.png");
+.locationBg {
+  /* background-image: url("/images/pic7.png");
   background-position: bottom;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   box-shadow: 10px 10px 10px 18px grey;
- }
+}
 
 .locheader {
-    background-color: rgb(255, 255, 250);
-    padding: 10px;
-    text-align: right;
-    font-size: 25px;
-    font-weight: bolder;
-    border: 10px double;
-    box-shadow: 2px 2px 2px 2px grey;
+  background-color: rgb(51, 75, 128);
+  padding: 10px;
+  text-align: right;
+  font-size: 25px;
+  font-weight: bolder;
+  color: white;
+  border: 10px;
+  box-shadow: 2px 3px goldenrod;
 }
 
 .formAddress {
   padding: 30px;
 }
 
-.formLabel  {
+.formLabel {
   font-weight: bold;
   font-size: larger;
   text-shadow: 1px 1px yellowgreen;
 }
 
 #locationBtn {
-    box-shadow: 5px 5px rgb(159, 165, 165);
+  box-shadow: 5px 5px rgb(159, 165, 165);
 }
 
 #dropdownBasic {
-   box-shadow:  5px 5px rgb(159, 165, 165);
+  box-shadow: 5px 5px rgb(159, 165, 165);
 }
 
-.locationFooter{
-    border: transparent;
-    box-shadow: 2px 2px 5px 5px rgb(52, 53, 43);
-    margin-top: 120px;
-} 
+.locationFooter {
+  border: transparent;
+  box-shadow: 2px 2px 5px 5px rgb(52, 53, 43);
+  margin-top: 120px;
+}
