--- a/client/src/pages/css/BkgWorkSpace.css
+++ b/client/src/pages/css/BkgWorkSpace.css
@@ -9,10 +9,10 @@ html {
 }
 
 .bkgWsBg {
-  background-image: url("/images/pic8.png");
+  /* background-image: url("/images/pic8.png");
   background-position: bottom;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   box-shadow: 10px 10px 10px 18px grey;
 }
 
