--- a/client/src/pages/css/SearchResult.css
+++ b/client/src/pages/css/SearchResult.css
@@ -9,22 +9,22 @@ html {
 }
 
 .SRbg {
-  background-image: url("/images/pic9.png");
+  /* background-image: url("/images/pic9.png");
   background-position: right;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   box-shadow: 10px 10px 10px 18px grey;
 }
 
 .SRheader {
-  background-color: rgb(133, 47, 116);
+  background-color: rgb(51, 75, 128);
   padding: 10px;
   text-align: right;
   font-size: 25px;
   font-weight: bolder;
   color: white;
   border: 10px;
-  box-shadow: 2px 3px rgb(213, 213, 136);
+  box-shadow: 2px 3px goldenrod;
 }
 
 .SRPadding {
