--- a/client/src/pages/css/WorkSpaceDetail.css
+++ b/client/src/pages/css/WorkSpaceDetail.css
@@ -9,21 +9,22 @@ html {
 }
 
 .bg { 
-  background-image: url("/images/pic11.png");
+  /* background-image: url("/images/pic11.png");
   background-position: bottom;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   box-shadow: 10px 10px 10px 18px grey;
  }
 
-.header {
-    background-color: rgb(198, 227, 225);
-    padding: 10px;
-    text-align: right;
-    font-size: 25px;
-    font-weight: bolder;
-    border: 10px double;
-    box-shadow: 2px 2px 2px 2px grey;
+.WSheader {
+background-color: rgb(51, 75, 128);
+  padding: 10px;
+  text-align: right;
+  font-size: 25px;
+  font-weight: bolder;
+  color: white;
+  border: 10px;
+  box-shadow: 2px 3px goldenrod;
 }
 
 .paddingWD {
