--- a/client/src/pages/css/ownerDashboard.css
+++ b/client/src/pages/css/ownerDashboard.css
@@ -15,21 +15,22 @@ html {
 }
  
 .ownerBg { 
-  background-image: url("/images/pic6.png");
+  /* background-image: url("/images/pic6.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   box-shadow: 10px 10px 10px 18px grey;
  }
 
 .DBheader {
-  background-color: rgb(252, 228, 213);
+  background-color: rgb(51, 75, 128);
   padding: 10px;
   text-align: right;
   font-size: 25px;
   font-weight: bolder;
-  border: 10px double;
-  box-shadow: 2px 2px 2px 2px grey;
+  color: white;
+  border: 10px;
+  box-shadow: 2px 3px goldenrod;
 }
 
 .paddingForPage {
