--- a/client/src/pages/css/SearchResult.css
+++ b/client/src/pages/css/SearchResult.css
@@ -29,9 +29,9 @@ html {
 
 .SRPadding {
   clear: both;
-padding-left: 20px;
-padding-right: 20px;
-padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .featureList {
@@ -40,6 +40,7 @@ padding-bottom: 20px;
   box-shadow: 3px 3px rgb(146, 150, 143);
   background-color: rgb(255, 251, 253);
   padding: 20px;
+  /* text-align: initial cneter; */
 }
 
 .mapborder {
