--- a/client/src/pages/css/login.css
+++ b/client/src/pages/css/login.css
@@ -1,12 +1,33 @@
 .card-img-top {
   width: 100%;
-  height: 10vw;
+  height: auto;
+  margin-bottom: 25px;
   object-fit: cover;
 }
-.row {
-  display: flex;
-  margin-top: 10px;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+
+#uname,
+#passwd {
+  border: none;
+  border-bottom: 1px solid #222;
+  background-color: transparent;
+}
+#buttonSubmit {
+  height: 40px;
+  width: 100%;
+  border: none;
+  background-color: gray;
+  color: #ffffff;
+}
+
+#signup {
+  height: 40px;
+  width: 50%;
+  border: none;
+  background-color: gray;
+  color: #ffffff;
+}
+
+#signup:hover {
+  background-color: chartreuse;
+  transition-duration: 0.4s;
 }
