--- a/client/src/pages/css/login.css
+++ b/client/src/pages/css/login.css
@@ -1,3 +1,10 @@
+#main {
+  /* background-color: aquamarine; */
+  background-image: url("/images/loginimg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .card-img-top {
   width: 100%;
   height: auto;
