--- a/client/src/components/Search/style.css
+++ b/client/src/components/Search/style.css
@@ -2,11 +2,11 @@
 .SingleDatePickerInput {
   display: block;
   width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
+  height: calc(1.25em + 0.75rem + 2px);
+  padding: 0.1rem 0.75rem;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  /* border: 1px solid #ced4da; */
   border-radius: 0.25rem;
   -webkit-transition: border-color 0.15s ease-in-out,
     box-shadow 0.15s ease-in-out;
@@ -17,11 +17,15 @@
   padding: 0 !important;
   font-size: 1rem !important;
   font-weight: 400 !important;
-  line-height: 1.5 !important;
+  line-height: 1.3 !important;
   color: #495057 !important;
 }
 
 #searchBtn {
    box-shadow: 2px 2px 5px 5px rgb(95, 99, 99);
+   margin-top: 15px;
 }
 
+.borderCheckinOut {
+  border: 2px solid black;
+}
